# IEFxRack

./: .gitmodules  AudioProgrammingGoldenRules.md  CMakeLists.txt  LICENSE  README.md
Application/: CMakeLists.txt  main.cpp
Source/: CMakeLists.txt  IEFxModule.cpp  IEFxModule.h  IEFxModule_Chorus.cpp  IEFxModule_Chorus.h  IEFxModule_Delay.cpp  IEFxModule_Delay.h  IEFxModule_Input.cpp  IEFxModule_Input.h  IEFxModule_Oscillator.cpp  IEFxModule_Oscillator.h  IEFxModule_Reverb.cpp  IEFxModule_Reverb.h  IEFxRack.cpp  IEFxRack.h  IESpinOnWriteObject.h
Source/Components/: CMakeLists.txt
Source/Components/Delays/: MonoDelay.h  StereoDelay.h
Source/Components/Filters/: CMakeLists.txt
